Fix wrong font name

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -22,5 +22,5 @@
 
 @include font-face(Inter, '../fonts/Inter', 'Inter-Regular');
 @include font-face(Inter, '../fonts/Inter', 'Inter-Medium', 500);
-@include font-face(Inter, '../fonts/Inter', 'Inter-Medium', 600);
+@include font-face(Inter, '../fonts/Inter', 'Inter-SemiBold', 600);
 @include font-face(Inter, '../fonts/Inter', 'Inter-Bold', 700);
